
opam-version: "1.2"
version: "0.1.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/mocha_of_ocaml"
bug-reports: "https://github.com/derui/mocha_of_ocaml"
dev-repo: "https://github.com/derui/mocha_of_ocaml"
tags: []
build: [
  "jbuilder" "build" "-p" name "-j" jobs
]
depends: [
  "jbuilder" { >= "1.0+beta16"}
  "lwt" {>= "3.1.0"}
  "js_of_ocaml-lwt" {>= "3.0.2"}
  "js_of_ocaml" {>= "3.0.2"}
  "js_of_ocaml-ppx" { >= "3.0.2"}
]
available: [ocaml-version >= "4.05.0"]
